<resources>
    <!--SharedPreferences-->
    <string name="name_file_preferences">com.crystalcloud.sharedPreferencesPro</string>
    <string name="url_server">https://playground-bookstore.herokuapp.com/api/v1/</string>
    <string name="key_token">plain-text-token</string>
    <string name="api_login">login</string>
    <string name="api_books">books</string>
    <string name="api_register">register</string>
    <string name="api_logout">logout</string>
    <string name="api_categories">categories</string>
    <string name="api_authors">authors</string>
    <!-- Errors -->
    <string name="error_422">Ya existe una cuenta con el correo ingresado</string>
    <string name="error_internet">No hay conexión a internet</string>
    <!-- Regular strings -->
    <string name="app_name">Bookodemia</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="is_not_user">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="login">Iniciar sesión</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_c">Confirmar Contraseña</string>
    <string name="hint_user">Usuario</string>
    <string name="require_field">Campo requerido</string>
    <string name="icon">Icono</string>
    <string name="back">Regresar</string>
    <string name="reg_message">Estás a unos cuantos pasos de vivir la mejor experiencia</string>
    <string name="reg_title">Registra tu información</string>
    <string name="create_account">Crear cuenta</string>
    <string name="dif_password">Deben coincidir las contraseñas</string>
    <string name="wrong_email">Correo incorrecto</string>
    <string name="wrong_user_data">Usuario/Contraseña incorrectos</string>
    <string name="hi">Hola</string>
    <string name="popular">Más populares</string>
    <string name="recent">Recién agregados</string>
    <string name="books">Libros</string>
    <string name="categories">Categorías</string>
    <string name="authors">Autores</string>
    <string name="title">Título</string>
    <string name="by_author">by Autor</string>
    <string name="category">Categoría</string>
    <string name="description">Descripción</string>
    <string name="details">Detalles</string>
    <string name="author_about">Sobre el autor</string>
    <string name="author_name">Nombre del autor</string>
    <string name="mockup">Book Mockup</string>
    <string name="lorem">Lorem ipsum es el texto que se usa habitualmente en diseño gráfico en demostraciones de tipografías o de borradores de diseño para probar el diseño visual antes de insertar el texto final.</string>
    <string name="share">Compartir</string>
</resources>